--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<H1>This is heading level 1</H>
-<H2>This is heading level 2</h>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
